examples/illformed/undeclared_var.zn
func main() {
    println(x); // Error: 'x' not declared
}

